# cardiac-geometriesx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  pyproject.toml
.github/workflows/: docker-image.yml  github-pages.yml  pre-commit.yml  pypi.yml  test-mpi.yml  test.yml
demos/: additional_data.py  biv_ellipsoid.py  cylinders.py  lv_ellipsoid.py  slab.py  ukb.py  ukb_atlas.py
docs/: api.rst  gui.md  logo.pptx  published_meshes.md
src/cardiac_geometries/: __init__.py  _mesh.py  aha.py  cli.py  fibers.py  geometry.py  gui.py  lv.py  mesh.py  utils.py
src/cardiac_geometries/fibers/: __init__.py  _lv_ellipsoid.py  _slab.py  _utils.py  cylinder.py  cylinder_elliptical.py  cylinder_flat.py  lv_ellipsoid.py  slab.py  utils.py
tests/: test_cli.py  test_lv.py  test_refinement.py  test_save_load.py
