[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-geometriesx"
version = "0.10.1"
description = "A python library for cardiac geometries"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["cardiac", "geometry"]
urls = {Homepage = "https://github.com/finsberg/cardiac-geometriesx" }
requires-python = ">=3.10"
dependencies = [
    "fenics-dolfinx>=0.9.0",
    "structlog",
    "cardiac-geometries-core>=0.4",
    "rich-click",
    "adios4dolfinx",
    "scifem",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "ipython",
    "pdbpp",
    "pre-commit",
    "twine",
    "wheel",
]
docs = [
    "jupyter-book<2.0",
    "jupytext",
    "jupyter",
    "pyvista[all]>=0.45.0",
    "vtk>=9.5.0",
    "trame-vuetify",
    "ipywidgets",
    "fenicsx-ldrb",
    "ukb-atlas",
    "sphinx-codeautolink",
    "sphinx-copybutton",
]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ukb-atlas[pyvista]",
    "fenicsx-ldrb",
]
gui = [
    "streamlit",
    "stpyvista",
    "pyvista[all]>=0.43.0",
    "trame-vuetify",
    "ipywidgets",
    "fenicsx-ldrb",

]

[project.scripts]
geox = "cardiac_geometries.cli:app"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/cardiac_geometries", "tests"]
ignore_missing_imports = true
exclude = [
    "docs",
    "examples",
]



[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "demos/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["cardiac_geometries"]
known-third-party = [
    "basix",
    "dolfinx",
    "ffcx",
    "ufl",
    "gmsh",
    "numpy",
    "pytest",
]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]


[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "0.10.1"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
